When logging metrics put em all on one line